--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Đặc Sản Việt Nam - Ẩm Thực Truyền Thống</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon/favicon_io/site.webmanifest">
 </head>
 <body>
 <header>
@@ -44,7 +48,7 @@
                 <a href="#specialties" class="btn">Xem Các Món Đặc Sản</a>
             </div>
             <div class="about-image">
-                <img src="/image/am-thuc-viet-nam.jpg" alt="Ẩm thực Việt Nam" loading="lazy" width="100%" height="100%">
+                <img src="image/am-thuc-viet-nam.jpg" alt="Ẩm thực Việt Nam" loading="lazy" width="100%" height="100%">
             </div>
         </div>
     </div>
@@ -57,7 +61,7 @@
             <!-- Item 1 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Phở Hà Nội">
+                    <img src="image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Phở Hà Nội">
                 </div>
                 <div class="specialty-info">
                     <h3>Phở Hà Nội</h3>
@@ -68,7 +72,7 @@
             <!-- Item 2 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Bún bò Huế">
+                    <img src="image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Bún bò Huế">
                 </div>
                 <div class="specialty-info">
                     <h3>Bún bò Huế</h3>
@@ -79,7 +83,7 @@
             <!-- Item 3 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/hu-tieu-nam-vang.png" width="100%" height="100%" loading="lazy" alt="Hủ tiếu Nam Vang">
+                    <img src="image/hu-tieu-nam-vang.png" width="100%" height="100%" loading="lazy" alt="Hủ tiếu Nam Vang">
                 </div>
                 <div class="specialty-info">
                     <h3>Hủ tiếu Nam Vang</h3>
@@ -90,7 +94,7 @@
             <!-- Item 4 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/Cao%20lầu%20Hội%20An.png" width="100%" height="100%" loading="lazy" alt="Cao lầu Hội An">
+                    <img src="image/Cao%20lầu%20Hội%20An.png" width="100%" height="100%" loading="lazy" alt="Cao lầu Hội An">
                 </div>
                 <div class="specialty-info">
                     <h3>Cao lầu Hội An</h3>
@@ -101,7 +105,7 @@
             <!-- Item 5 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh xèo miền Tây">
+                    <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh xèo miền Tây">
                 </div>
                 <div class="specialty-info">
                     <h3>Bánh xèo miền Tây</h3>
@@ -112,7 +116,7 @@
             <!-- Item 6 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="/image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Bánh cuốn Thanh Trì">
+                    <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Bánh cuốn Thanh Trì">
                 </div>
                 <div class="specialty-info">
                     <h3>Bánh cuốn Thanh Trì</h3>
@@ -137,7 +141,7 @@
                 <!-- North specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Bún%20chả%20Hà%20Nội.jpg" width="100%" height="100%" loading="lazy" alt="Bún chả Hà Nội">
+                        <img src="image/Bún%20chả%20Hà%20Nội.jpg" width="100%" height="100%" loading="lazy" alt="Bún chả Hà Nội">
                     </div>
                     <div class="specialty-info">
                         <h3>Bún chả Hà Nội</h3>
@@ -146,7 +150,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Chả%20cá%20Lã%20Vọng.webp" width="100%" height="100%" loading="lazy" alt="Chả cá Lã Vọng">
+                        <img src="image/Chả%20cá%20Lã%20Vọng.webp" width="100%" height="100%" loading="lazy" alt="Chả cá Lã Vọng">
                     </div>
                     <div class="specialty-info">
                         <h3>Chả cá Lã Vọng</h3>
@@ -155,7 +159,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Bánh%20tôm%20Hồ%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh tôm Hồ Tây">
+                        <img src="image/Bánh%20tôm%20Hồ%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh tôm Hồ Tây">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh tôm Hồ Tây</h3>
@@ -169,7 +173,7 @@
                 <!-- Central specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Mì%20Quảng.webp" width="100%" height="100%" loading="lazy" alt="Mì Quảng">
+                        <img src="image/Mì%20Quảng.webp" width="100%" height="100%" loading="lazy" alt="Mì Quảng">
                     </div>
                     <div class="specialty-info">
                         <h3>Mì Quảng</h3>
@@ -178,7 +182,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Bánh%20bèo%20Huế.jpg" width="100%" height="100%" loading="lazy" alt="Bánh bèo Huế">
+                        <img src="image/Bánh%20bèo%20Huế.jpg" width="100%" height="100%" loading="lazy" alt="Bánh bèo Huế">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh bèo Huế</h3>
@@ -187,7 +191,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Bánh%20ướt%20thịt%20nướng.webp" width="100%" height="100%" loading="lazy" alt="Bánh ướt thịt nướng">
+                        <img src="image/Bánh%20ướt%20thịt%20nướng.webp" width="100%" height="100%" loading="lazy" alt="Bánh ướt thịt nướng">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh ướt thịt nướng</h3>
@@ -201,7 +205,7 @@
                 <!-- South specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Bánh%20canh%20Trảng%20Bàng.jpg" loading="lazy" width="100%" height="100%" alt="Bánh canh Trảng Bàng">
+                        <img src="image/Bánh%20canh%20Trảng%20Bàng.jpg" loading="lazy" width="100%" height="100%" alt="Bánh canh Trảng Bàng">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh canh Trảng Bàng</h3>
@@ -210,7 +214,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/Lẩu%20đặc%20trưng%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Lẩu mắm">
+                        <img src="image/Lẩu%20đặc%20trưng%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Lẩu mắm">
                     </div>
                     <div class="specialty-info">
                         <h3>Lẩu mắm</h3>
@@ -219,7 +223,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="/image/com-tam-sai-gon.jpg" width="100%" height="100%" loading="lazy" alt="Cơm tấm Sài Gòn">
+                        <img src="image/com-tam-sai-gon.jpg" width="100%" height="100%" loading="lazy" alt="Cơm tấm Sài Gòn">
                     </div>
                     <div class="specialty-info">
                         <h3>Cơm tấm Sài Gòn</h3>
@@ -236,49 +240,49 @@
         <h2 class="section-title">Thư Viện Ảnh</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="/image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Phở Hà Nội</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bún bò Huế</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh xèo</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/goi-cuon.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/goi-cuon.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Gỏi cuốn</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/banh-mi-ha-noi.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/banh-mi-ha-noi.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh mì Việt Nam</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/che-cac-loai.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/che-cac-loai.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Chè các loại</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/egg-coffee-4977310_1280.jpg" loading="lazy" width="100%" height="100%" alt="Ẩm thực Việt Nam">
+                <img src="image/egg-coffee-4977310_1280.jpg" loading="lazy" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Cà phê trứng</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="/image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh cuốn</h3>
                 </div>
@@ -301,10 +305,10 @@
                 </div>
                 <h3>Theo Dõi Chúng Tôi</h3>
                 <div class="social-links">
-                    <a href="#" title="Facebook"><img src="/image/facebook1.png" loading="lazy" alt="Biểu tượng Facebook" width="30" height="30"></a>
-                    <a href="#" title="Twitter"><img src="/image/twitter1.png" loading="lazy" alt="Biểu tượng Twitter" width="24" height="24"></a>
-                    <a href="#" title="Instagram"><img src="/image/instagram1.png" loading="lazy" alt="Biểu tượng Instagram" width="32" height="32"></a>
-                    <a href="#" title="YouTube"><img src="/image/youtube1.png" loading="lazy" alt="Biểu tượng YouTube" width="24" height="24"></a>
+                    <a href="#" title="Facebook"><img src="image/facebook1.png" loading="lazy" alt="Biểu tượng Facebook" width="30" height="30"></a>
+                    <a href="#" title="Twitter"><img src="image/twitter1.png" loading="lazy" alt="Biểu tượng Twitter" width="24" height="24"></a>
+                    <a href="#" title="Instagram"><img src="image/instagram1.png" loading="lazy" alt="Biểu tượng Instagram" width="32" height="32"></a>
+                    <a href="#" title="YouTube"><img src="image/youtube1.png" loading="lazy" alt="Biểu tượng YouTube" width="24" height="24"></a>
                 </div>
             </div>
             <div class="contact-form">
