cập nhật menu và logo

--- a/index.html
+++ b/index.html
@@ -3,20 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đặc Sản Việt Nam - Ẩm Thực Truyền Thống</title>
+    <title>Vị Quê Việt - Ẩm Thực Truyền Thống</title>
+
+    <!-- Các thẻ Meta cho SEO -->
+    <meta name="description" content="Khám phá đặc sản ẩm thực Việt Nam từ khắp ba miền, với hương vị truyền thống và tinh hoa dân tộc.">
+    <meta name="keywords" content="đặc sản Việt Nam, ẩm thực Việt Nam, món ăn truyền thống, phở, bún chả, bánh xèo, miền Bắc, miền Trung, miền Nam">
+    <meta name="author" content="Vị Quê Việt">
+
+    <!-- Thẻ Meta cho Social Media (Open Graph - Facebook) -->
+    <meta property="og:title" content="Đặc Sản Việt Nam - Ẩm Thực Truyền Thống">
+    <meta property="og:description" content="Khám phá đặc sản ẩm thực Việt Nam từ khắp ba miền, với hương vị truyền thống và tinh hoa dân tộc.">
+    <meta property="og:image" content="https://thinhnt-mr.github.io/am-thuc-vn/image/baner.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://thinhnt-mr.github.io/am-thuc-vn/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Vị Quê Việt">
+
+    <!-- Thẻ Meta cho Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@viqueviet">
+    <meta name="twitter:title" content="Đặc Sản Việt Nam - Ẩm Thực Truyền Thống">
+    <meta name="twitter:description" content="Khám phá đặc sản ẩm thực Việt Nam từ khắp ba miền.">
+    <meta name="twitter:image" content="https://thinhnt-mr.github.io/am-thuc-vn/image/baner.png">
+
+    <!-- Canonical URL -->
+    <meta rel="canonical" href="https://thinhnt-mr.github.io/am-thuc-vn/">
+
+    <!-- link IE và Edge -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Preconnect và DNS-Prefetch -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+    <!-- Font (Nếu sử dụng Google Fonts) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- CSS và Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon/favicon_io/site.webmanifest">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Mobile App Meta (nếu trang web có thể hoạt động như ứng dụng) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Vị Quê Việt">
 </head>
 <body>
 <header>
     <div class="container header-container">
-        <a href="index.html" class="logo"><span>Phạm Minh Thành</span></a>
+        <a href="index.html" class="logo"><img src="image/image-removebg-preview.png" width="160" height="45"></a>
         <div class="mobile-menu-btn">
-            <i class="fas fa-bars"></i>
+            <div class="menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
         <ul class="nav-menu">
             <li><a href="#home">Trang Chủ</a></li>
@@ -48,7 +100,7 @@
                 <a href="#specialties" class="btn">Xem Các Món Đặc Sản</a>
             </div>
             <div class="about-image">
-                <img src="image/am-thuc-viet-nam.jpg" alt="Ẩm thực Việt Nam" loading="lazy" width="100%" height="100%">
+                <img src="image/am-thuc-viet-nam.webp" alt="Ẩm thực Việt Nam" width="100%" height="100%">
             </div>
         </div>
     </div>
@@ -61,7 +113,7 @@
             <!-- Item 1 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Phở Hà Nội">
+                    <img src="image/beef-noodle-soup-6729018.webp" width="100%" height="100%" alt="Phở Hà Nội">
                 </div>
                 <div class="specialty-info">
                     <h3>Phở Hà Nội</h3>
@@ -72,7 +124,7 @@
             <!-- Item 2 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Bún bò Huế">
+                    <img src="image/bun-bo-hue.webp" width="100%" height="100%" alt="Bún bò Huế">
                 </div>
                 <div class="specialty-info">
                     <h3>Bún bò Huế</h3>
@@ -83,7 +135,7 @@
             <!-- Item 3 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/hu-tieu-nam-vang.png" width="100%" height="100%" loading="lazy" alt="Hủ tiếu Nam Vang">
+                    <img src="image/hu-tieu-nam-vang.jpg" width="100%" height="100%" alt="Hủ tiếu Nam Vang">
                 </div>
                 <div class="specialty-info">
                     <h3>Hủ tiếu Nam Vang</h3>
@@ -94,7 +146,7 @@
             <!-- Item 4 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/Cao%20lầu%20Hội%20An.png" width="100%" height="100%" loading="lazy" alt="Cao lầu Hội An">
+                    <img src="image/Cao%20lầu%20Hội%20An.jpg" width="100%" height="100%" alt="Cao lầu Hội An">
                 </div>
                 <div class="specialty-info">
                     <h3>Cao lầu Hội An</h3>
@@ -105,7 +157,7 @@
             <!-- Item 5 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh xèo miền Tây">
+                    <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" alt="Bánh xèo miền Tây">
                 </div>
                 <div class="specialty-info">
                     <h3>Bánh xèo miền Tây</h3>
@@ -116,7 +168,7 @@
             <!-- Item 6 -->
             <div class="specialty-card">
                 <div class="specialty-img">
-                    <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Bánh cuốn Thanh Trì">
+                    <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" alt="Bánh cuốn Thanh Trì">
                 </div>
                 <div class="specialty-info">
                     <h3>Bánh cuốn Thanh Trì</h3>
@@ -141,7 +193,7 @@
                 <!-- North specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Bún%20chả%20Hà%20Nội.jpg" width="100%" height="100%" loading="lazy" alt="Bún chả Hà Nội">
+                        <img src="image/Bún%20chả%20Hà%20Nội.jpg" width="100%" height="100%" alt="Bún chả Hà Nội">
                     </div>
                     <div class="specialty-info">
                         <h3>Bún chả Hà Nội</h3>
@@ -150,7 +202,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Chả%20cá%20Lã%20Vọng.webp" width="100%" height="100%" loading="lazy" alt="Chả cá Lã Vọng">
+                        <img src="image/Chả%20cá%20Lã%20Vọng.webp" width="100%" height="100%" alt="Chả cá Lã Vọng">
                     </div>
                     <div class="specialty-info">
                         <h3>Chả cá Lã Vọng</h3>
@@ -159,7 +211,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Bánh%20tôm%20Hồ%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Bánh tôm Hồ Tây">
+                        <img src="image/Bánh%20tôm%20Hồ%20Tây.jpg" width="100%" height="100%"  alt="Bánh tôm Hồ Tây">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh tôm Hồ Tây</h3>
@@ -173,7 +225,7 @@
                 <!-- Central specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Mì%20Quảng.webp" width="100%" height="100%" loading="lazy" alt="Mì Quảng">
+                        <img src="image/Mì%20Quảng.webp" width="100%" height="100%" alt="Mì Quảng">
                     </div>
                     <div class="specialty-info">
                         <h3>Mì Quảng</h3>
@@ -182,7 +234,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Bánh%20bèo%20Huế.jpg" width="100%" height="100%" loading="lazy" alt="Bánh bèo Huế">
+                        <img src="image/Bánh%20bèo%20Huế.jpg" width="100%" height="100%" alt="Bánh bèo Huế">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh bèo Huế</h3>
@@ -191,7 +243,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Bánh%20ướt%20thịt%20nướng.webp" width="100%" height="100%" loading="lazy" alt="Bánh ướt thịt nướng">
+                        <img src="image/Bánh%20ướt%20thịt%20nướng.webp" width="100%" height="100%" alt="Bánh ướt thịt nướng">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh ướt thịt nướng</h3>
@@ -205,7 +257,7 @@
                 <!-- South specialties -->
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Bánh%20canh%20Trảng%20Bàng.jpg" loading="lazy" width="100%" height="100%" alt="Bánh canh Trảng Bàng">
+                        <img src="image/Bánh%20canh%20Trảng%20Bàng.jpg" width="100%" height="100%" alt="Bánh canh Trảng Bàng">
                     </div>
                     <div class="specialty-info">
                         <h3>Bánh canh Trảng Bàng</h3>
@@ -214,7 +266,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/Lẩu%20đặc%20trưng%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Lẩu mắm">
+                        <img src="image/Lẩu%20đặc%20trưng%20miền%20Tây.jpg" width="100%" height="100%" alt="Lẩu mắm">
                     </div>
                     <div class="specialty-info">
                         <h3>Lẩu mắm</h3>
@@ -223,7 +275,7 @@
                 </div>
                 <div class="specialty-card">
                     <div class="specialty-img">
-                        <img src="image/com-tam-sai-gon.jpg" width="100%" height="100%" loading="lazy" alt="Cơm tấm Sài Gòn">
+                        <img src="image/com-tam-sai-gon.jpg" width="100%" height="100%" alt="Cơm tấm Sài Gòn">
                     </div>
                     <div class="specialty-info">
                         <h3>Cơm tấm Sài Gòn</h3>
@@ -240,49 +292,49 @@
         <h2 class="section-title">Thư Viện Ảnh</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="image/beef-noodle-soup-6729018.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/beef-noodle-soup-6729018.webp" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Phở Hà Nội</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/bun-bo-hue.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/bun-bo-hue.webp" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bún bò Huế</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/Bánh%20xèo%20miền%20Tây.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh xèo</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/goi-cuon.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/goi-cuon.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Gỏi cuốn</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/banh-mi-ha-noi.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/banh-mi-ha-noi.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh mì Việt Nam</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/che-cac-loai.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/che-cac-loai.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Chè các loại</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/egg-coffee-4977310_1280.jpg" loading="lazy" width="100%" height="100%" alt="Ẩm thực Việt Nam">
+                <img src="image/egg-coffee-4977310_1280.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Cà phê trứng</h3>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" loading="lazy" alt="Ẩm thực Việt Nam">
+                <img src="image/Bánh%20cuốn%20Thanh%20Trì.jpg" width="100%" height="100%" alt="Ẩm thực Việt Nam">
                 <div class="gallery-overlay">
                     <h3>Bánh cuốn</h3>
                 </div>
@@ -299,16 +351,16 @@
                 <h3>Thông Tin Liên Hệ</h3>
                 <div class="contact-details">
                     <p><i class="fas fa-map-marker-alt"></i> Hợp Thanh - Mỹ Đức - Hà Nội</p>
-                    <p><i class="fas fa-phone"></i> (84) 326 718 430</p>
-                    <p><i class="fas fa-envelope"></i> phamminhthanh@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> (84) 868 734 589</p>
+                    <p><i class="fas fa-envelope"></i> viqueviet@gmail.com</p>
                     <p><i class="fas fa-clock"></i> Mở cửa: 8:00 - 22:00 hàng ngày</p>
                 </div>
                 <h3>Theo Dõi Chúng Tôi</h3>
                 <div class="social-links">
-                    <a href="#" title="Facebook"><img src="image/facebook1.png" loading="lazy" alt="Biểu tượng Facebook" width="30" height="30"></a>
-                    <a href="#" title="Twitter"><img src="image/twitter1.png" loading="lazy" alt="Biểu tượng Twitter" width="24" height="24"></a>
-                    <a href="#" title="Instagram"><img src="image/instagram1.png" loading="lazy" alt="Biểu tượng Instagram" width="32" height="32"></a>
-                    <a href="#" title="YouTube"><img src="image/youtube1.png" loading="lazy" alt="Biểu tượng YouTube" width="24" height="24"></a>
+                    <a href="#" title="Facebook"><img src="image/facebook1.png" alt="Biểu tượng Facebook" width="30" height="30"></a>
+                    <a href="#" title="Twitter"><img src="image/twitter1.png" alt="Biểu tượng Twitter" width="24" height="24"></a>
+                    <a href="#" title="Instagram"><img src="image/instagram1.png" alt="Biểu tượng Instagram" width="32" height="32"></a>
+                    <a href="#" title="YouTube"><img src="image/youtube1.png" alt="Biểu tượng YouTube" width="24" height="24"></a>
                 </div>
             </div>
             <div class="contact-form">
@@ -374,7 +426,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 Phạm Minh Thành. Bảo lưu mọi quyền.</p>
+            <p>&copy; 2025 Vị Quê Việt. Bảo lưu mọi quyền.</p>
         </div>
     </div>
 </footer>
