cập nhật lại menu

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             </div>
         </div>
         <ul class="nav-menu">
-            <li><a href="#home">Trang Chủ</a></li>
-            <li><a href="#about">Giới Thiệu</a></li>
-            <li><a href="#specialties">Đặc Sản</a></li>
-            <li><a href="#regions">Vùng Miền</a></li>
-            <li><a href="#gallery">Thư Viện</a></li>
-            <li><a href="#contact">Liên Hệ</a></li>
+            <li><a href="#home" class="menu-link">Trang Chủ</a></li>
+            <li><a href="#about" class="menu-link">Giới Thiệu</a></li>
+            <li><a href="#specialties" class="menu-link">Đặc Sản</a></li>
+            <li><a href="#regions" class="menu-link">Vùng Miền</a></li>
+            <li><a href="#gallery" class="menu-link">Thư Viện</a></li>
+            <li><a href="#contact" class="menu-link">Liên Hệ</a></li>
         </ul>
     </div>
 </header>
